// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="mdc-radio custom"
>
  <input
    className="mdc-radio__native-control"
    disabled={undefined}
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className="mdc-radio mdc-radio--disabled"
>
  <input
    className="mdc-radio__native-control"
    disabled={true}
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;
